using clj-async-profiler