@@ -4,11 +4,12 @@
   :license {:name "EPL-2.0 OR GPL-2.0-or-later WITH Classpath-exception-2.0"
             :url "https://www.eclipse.org/legal/epl-2.0/"}
   :dependencies [[org.clojure/clojure "1.10.0"]
-                 [org.clojure/core.async "1.6.673"]]
+                 [com.clojure-goes-fast/clj-async-profiler "1.0.4"]]
   :repl-options {:init-ns game.core}
   :main game.core
   :jvm-opts ["-XX:+UseSerialGC"
-               ;"-verbose:gc"
+               ;"-verbose:gc" 
+             "-Djdk.attach.allowAttachSelf=true"
              "-Xms128m" "-Xmx128m"]
   :profiles {:uberjar {:aot :all}}
   :aot [game.core])
